<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.auro.projectinclusion.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.LanguageActivity" >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021">

            <ProgressBar
                android:id="@+id/language_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerInParent="true"></ProgressBar>

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/app_logo">

            </ImageView>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/welcome_txt"
                android:textColor="@color/black"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/lang_selection_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/metropolis_light"
                android:text="@string/language_choose"
                android:textSize="16sp">

            </TextView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/language_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lang_selection_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp">

            </androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/language_recycler"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lang_pref_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/metropolis_light"
                    android:text="@string/lang_pref_string"
                    android:textSize="16sp">

                </TextView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:elevation="7dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:id="@+id/lang_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="@drawable/button_background">

                        <TextView
                            android:id="@+id/lang_bttn_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/metropolis_light"
                            android:text="@string/cont_text"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"></TextView>

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/circular_over_button">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"></ImageView>

                        </RelativeLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>