<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.auro.projectinclusion.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SignUpActivity">


        <RelativeLayout
            android:id="@+id/relative_back_certificate"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:background="@color/back_background_color"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/signup_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_path_25"></ImageView>


        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relative_back_certificate"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_title"
                android:textSize="30dp"
                android:fontFamily="@font/metropolis_semibold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_header"
                android:textSize="18dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/metropolis_light">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/name_txt"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edittext">




                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="12dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:hint="Enter your name"
                    android:drawablePadding="12dp"
                    android:text="@={viewmodel.name_signup}"
                    android:drawableLeft="@drawable/ic_username_icon"
                    android:textColorHint="@color/border_background_color"
                    android:background="@null"></EditText>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/username_text"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edittext">




                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="12dp"
                    android:textSize="14sp"
                    android:hint="Enter your name"
                    android:singleLine="true"
                    android:drawablePadding="12dp"
                    android:text="@={viewmodel.username_signup}"
                    android:drawableLeft="@drawable/ic_email_icon"
                    android:textColorHint="@color/border_background_color"
                    android:background="@null"></EditText>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/password_txt"
                android:textColor="@color/black"
                android:textSize="18sp"></TextView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edittext">




                <EditText
                    android:id="@+id/edit_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="12dp"
                    android:textSize="14sp"
                    android:drawableLeft="@drawable/ic_password_icon"
                    android:inputType="textPassword"
                    android:drawablePadding="12dp"
                    android:singleLine="true"
                    android:text="@={viewmodel.password_signup}"
                    android:hint="Enter your password"
                    android:textColorHint="@color/border_background_color"
                    android:background="@null"></EditText>


                <ImageView
                    android:id="@+id/show_pass_signupimg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/show"
                    android:layout_centerVertical="true">

                </ImageView>

                <ImageView
                    android:id="@+id/hide_pass_signupimg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/hide"
                    android:visibility="gone"
                    android:layout_centerVertical="true"></ImageView>


            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:cardUseCompatPadding="true"
                android:elevation="7dp"
                app:cardCornerRadius="10dp"
                >

                <RelativeLayout
                    android:id="@+id/signup_continue_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/button_background">

                    <TextView
                        android:id="@+id/crt_acnt_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/metropolis_light"
                        android:text="@string/create_accnt"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circular_over_button">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"></ImageView>

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="323dp"
            android:visibility="gone"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="271dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>